--- a/Booking/Views/Home/Index.cshtml
+++ b/Booking/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Booking.Models.Search
 
 <head>
     <link rel="stylesheet" href="~/css/homeIndex.css" />
@@ -20,7 +20,8 @@
         </div>
         <div class="form-group d-sm-flex margin">
             <div class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
-                <input type="text" required placeholder="From" class="form-control">
+                @*<input type="text" required placeholder="From" class="form-control">*@
+                <input asp-for="From" class="form-control" />
                 <div class="label" id="from"></div>
                 <span class="fas fa-dot-circle text-muted"></span>
             </div>
@@ -47,7 +48,8 @@
         </div>
         <div class="form-group my-3">
             <div class="btn btn-primary rounded-0 d-flex justify-content-center text-center p-3">
-                Search Flights
+                <input type="submit" value="Search Flight"  class="btn btn-primary" />
+                @*Search Flights*@
             </div>
         </div>
     </form>
