--- a/Booking/Views/Shared/_Layout.cshtml
+++ b/Booking/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Payment" asp-action="Create">Payment</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -33,6 +36,27 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+
+            <!--Success dialog start-->
+            <div id="myModalSuccess" class="modal fade text-width:30%;" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2>Iformation</h2>
+                            <button type ="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div id ="MyModalSuccessAlertBody" class="modal-body alert alert-success">
+                            this is a modal body , out message will appear here.
+                        </div>
+
+                        <div class="modal-footer">
+                            &nbsp;
+                            <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <!--success dialog ends-->
             @RenderBody()
         </main>
     </div>
