--- a/Booking/Views/Payment/Create.cshtml
+++ b/Booking/Views/Payment/Create.cshtml
@@ -4,37 +4,37 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Payment</h1>
 
-<h4>Payment</h4>
+@*<h4>Payment</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CardHolderFirstName" class="control-label"></label>
-                <input asp-for="CardHolderFirstName" class="form-control" />
-                <span asp-validation-for="CardHolderFirstName" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" required placeholder="Example@gmail.com" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CardHolderLastName" class="control-label"></label>
-                <input asp-for="CardHolderLastName" class="form-control" />
-                <span asp-validation-for="CardHolderLastName" class="text-danger"></span>
+                <label asp-for="CardHolderName" class="control-label"></label>
+                <input asp-for="CardHolderName" class="form-control" maxlength="15" minlength ="3" required placeholder="Example : Bob Dylan" />
+                <span asp-validation-for="CardHolderName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CardNumber" class="control-label"></label>
-                <input asp-for="CardNumber" class="form-control" />
+                <input asp-for="CardNumber" class="form-control" minlength="16" maxlength="16" required placeholder="Example : 5997 5997 5997 5997" />
                 <span asp-validation-for="CardNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ExparationMonth" class="control-label"></label>
-                <input asp-for="ExparationMonth" class="form-control" />
+                <input asp-for="ExparationMonth" class="form-control" minlength="2" maxlength="2"  required placeholder="Example : 09" />
                 <span asp-validation-for="ExparationMonth" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ExparationYear" class="control-label"></label>
-                <input asp-for="ExparationYear" class="form-control" />
+                <input asp-for="ExparationYear" class="form-control" minlength="4" maxlength="4" required placeholder="Example : 2027" />
                 <span asp-validation-for="ExparationYear" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -49,10 +49,34 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
+
+    @*@if (ViewData["Success"] != null)
+    {
+            <script>
+        alert("Record created successfully!");
+            </script>
+    }*@
+
+    
+
+
+
+@*    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    @if (Model != null)
+    {
+        <script type="text/javascript">
+            $(function(){
+                alert("Payment was successful , Thank you for booking with us !");
+            });
+        </script>
+    }*@
+    }
+
+            
