--- a/Booking/Views/Home/Index.cshtml
+++ b/Booking/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
     <form method="post" asp-controller="Home">
         <div class="form-group border-bottom d-flex align-items-center justify-content-between flex-wrap">
             <label class="option my-sm-0 my-2">
-                <input type="radio" name="radio" checked>Round Trip
+                <input type="radio" value="false" asp-for="isOneWay" id="rdo-no" onclick="unlockTextbox()" >Round Trip
                 <span class="checkmark"></span>
             </label>
             <label class="option my-sm-0 my-2">
-                <input type="radio" name="radio">One Way
+                <input type="radio" value="true" asp-for="isOneWay" id="rdo-no" onclick="lockTextbox()">One Way
                 <span class="checkmark"></span>
             </label>
             <div class="d-flex align-items-center my-sm-0 my-2">
@@ -21,13 +21,13 @@
         <div class="form-group d-sm-flex margin">
             <div class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
                 @*<input type="text" required placeholder="From" class="form-control">*@
-                <input asp-for="From" class="form-control" />
+                <input asp-for="From" required placeholder="From" class="form-control" />
                 <div class="label" id="from"></div>
                 <span class="fas fa-dot-circle text-muted"></span>
             </div>
             <div class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
                 @*<input type="text" required placeholder="To" class="form-control">*@
-                <input asp-for="To" class="form-control" />
+                <input asp-for="To" required placeholder="To" class="form-control" />
                 <div class="label" id="to"></div>
                 <span class="fas fa-map-marker text-muted"></span>
             </div>
@@ -36,14 +36,14 @@
             <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
                 @*<input type="date" required placeholder="Depart Date" class="form-control">*@
                 <label asp-for="FlightDate"></label>
-                <input asp-for="FlightDate" class="form-control" />
+                <input asp-for="FlightDate" type="date" asp-format="{0:dd/MM/yyyy}" class="form-control" id="flightdate" />
                 <div class="label" id="depart"></div>
             </div>
             <div class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
                 <label asp-for="ReturnDate"></label>
                 @*<input type="date" required placeholder="Return Date" class="form-control">*@
-                <input asp-for="ReturnDate" class="form-control" />
-                <div class="label" id="return"></div>
+                <input asp-for="ReturnDate" type="date" asp-format="{0:dd/MM/yyyy}" class="form-control" id="returndate" />
+                @*<div class="label" id="return"></div>*@
             </div>
         </div>
         
@@ -51,14 +51,14 @@
             <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
                 <label asp-for="PriceMin"></label>
                 @*<input type="date" required placeholder="Depart Date" class="form-control">*@
-                <input asp-for="PriceMin" class="form-control" />
+                <input asp-for="PriceMin" type="number" class="form-control" />
                 <div class="label" id="pricemin"></div>
                 <span class="fas fa-dot-circle text-muted"></span>
             </div>
             <div class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
                 <label asp-for="PriceMax"></label>
                 @*<input type="date" required placeholder="Return Date" class="form-control">*@
-                <input asp-for="PriceMax" class="form-control" />
+                <input asp-for="PriceMax" type="number" class="form-control" />
                 <div class="label" id="maxprice"></div>
                 <span class="fas fa-map-marker text-muted"></span>
             </div>
@@ -79,29 +79,22 @@
 </div>
 
 @section Scripts {
-    @if (ViewData["Success"] != null)
+    @if (@TempData["Success"] != null)
     {
         <script>
-            alert("Record created successfully!");
+            alert("Payment was successful , Thank you for booking with us !!");
         </script>
     }
-
-    <script type="text/javascript">
-        
-        function openSuccessModal(strMessage){
-            var myDiv = document.getElementById("MyModalSuccessAlertBody");
-            myDiv.innerHTML = strMessage;
-            $('#myModalSuccess').Modal('show');
+    <script>
+        function lockTextbox() {
+            document.getElementById("returndate").disabled = true;
+            document.getElementById("returndate").value = new Date('0001-01-01T00:00:00Z');
+            console.log(myDate.getUTCFullYear());
         }
 
-        $(document).ready(function(){
-            var msg = "@TempData["Success"]";
-            if(msg =! null){
-                openSuccessModal(msg);
-            }
-        });
-
+        function unlockTextbox() {
+            document.getElementById("returndate").disabled = false;
+        }
     </script>
-
 
 }
