--- a/Booking/Views/Payments/Create.cshtml
+++ b/Booking/Views/Payments/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" >
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" readonly value="@User.Identity.Name" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CardNumber" class="control-label"></label>
-                <input asp-for="CardNumber" class="form-control" />
+                <input asp-for="CardNumber" id="CardNumber" minlength="12" maxlength="19" class="form-control" />
                 <span asp-validation-for="CardNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,7 +43,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" onclick="return validateCardNumber()" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -53,3 +53,13 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script>
+    function validateCardNumber() {
+        var cardNumber = document.getElementById("CardNumber").value;
+        if (I) {
+            alert("Invalid card number");
+            return false;
+        }
+        return true;
+    }
+</script>
