Fix some issues..

--- a/Booking/Views/Flights/GetAllFlights.cshtml
+++ b/Booking/Views/Flights/GetAllFlights.cshtml
@@ -149,7 +149,7 @@ else
         <br />
         <a asp-action="GetAllFlights" asp-route-id="4">Order By Origin Country</a>
         <br />
-        <a asp-action="GetAllFlights" asp-route-id="3">View All The Flights</a>
+        @*<a asp-action="GetAllFlights" asp-route-id="3">View All The Flights</a>*@
     </table>
 }
 
