--- a/Booking/Views/Home/Privacy.cshtml
+++ b/Booking/Views/Home/Privacy.cshtml
@@ -3,4 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+@*<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+
+</head>*@
+
 <p>Use this page to detail your site's privacy policy.</p>
