--- a/Booking/Views/Flights/HowManyTickets.cshtml
+++ b/Booking/Views/Flights/HowManyTickets.cshtml
@@ -6,13 +6,13 @@
 <h1>Choose Number Of Tickets</h1>
     <form method="post" asp-controller="Flights" asp-action="GoToPayment">
     <div>
-            <label for="numTickets">Number of Tickets:</label>
+            @*<label for="numTickets">Number of Tickets:</label>*@
         <input type ="number" asp-for="NumOfTickets" min="1" max="10"
             required class="form-control rounded-pill" style="border-radius:30px"/>
             <span asp-validation-for="NumOfTickets"></span>
         </div>
         <br />
-    <button type="submit" class="btn btn-success rounded-pill">Go To Payment</button>
+    <button type="submit" class="btn btn-primary rounded-pill">Proceed with the payment</button>
     </form>
 
 
