--- a/Booking/wwwroot/css/site.css
+++ b/Booking/wwwroot/css/site.css
@@ -13,11 +13,18 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    
+    min-height: 100%;
 }
 
+
+
 body {
-    /*background-image: url('../images/plane.jpg');*/
+    background-image: url('../images/planecartoon.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin: auto;
     margin-bottom: 60px;
 }
