--- a/Booking/Views/Flights/Book.cshtml
+++ b/Booking/Views/Flights/Book.cshtml
@@ -34,5 +34,5 @@
       @* <a asp-action="Edit" asp-route-id="model">Edit</a>*@
     
     <a asp-action="Index">Back to List</a>
-    <a asp-action="Index">Book This Flight</a>
+    <a asp-action="Create" asp-controller="Payment">Book This Flight</a>
 </div>
