--- a/Booking/Views/Flights/GetAllFlights.cshtml
+++ b/Booking/Views/Flights/GetAllFlights.cshtml
@@ -106,7 +106,7 @@ else
         <tbody>
             @foreach (var item in Model)
             {
-                <tr class="table-light">
+                <tr class="table-danger">
                     <td>
                         @Html.DisplayFor(modelItem => item.OriginCountry)
                     </td>
