--- a/Booking/Views/Flights/Index.cshtml
+++ b/Booking/Views/Flights/Index.cshtml
@@ -70,7 +70,7 @@ else
                         @Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
-                        <a asp-action="HowManyTickets" asp-route-id="@item.FlightId" class="btn btn-primary">Continiue to Choose Number Of Tickets</a>
+                        <a asp-action="HowManyTickets" asp-route-id="@item.FlightId" class="btn btn-primary">Click Here to Choose Number Of Tickets</a>
 
                     </td>
                 </tr>
